<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".CheckBoxRadioButtonFragment">

    <!-- TODO: Update blank fragment layout -->

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/customborder">

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioYes"/>

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioNo"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@drawable/customborder">

        <CheckBox
            android:id="@+id/checkboxCheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingCheese"/>

        <CheckBox
            android:id="@+id/checkboxMeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingMeat"/>

        <CheckBox
            android:id="@+id/checkboxSauces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingSauce"/>

        <CheckBox
            android:id="@+id/checkboxVeggies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppingVegitables"/>


    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="50dp"
        android:text="@string/submit"/>


</LinearLayout>